--- a/solr-example/webapps/wikassandra/index.html
+++ b/solr-example/webapps/wikassandra/index.html
@@ -61,7 +61,7 @@ jQuery(function($) {
             ,
             dataType: "json"
             ,
-            url: "http://localhost:8983/solr/wikassandra/select"
+            url: "/solr/wikassandra/select"
             ,
             cache: false
             ,
